incorrect vector alignment

XMLWordPrintable

    • b03
    • generic
    • generic

        Several vector jtreg tests timeout on SPARC with 32-bit VM:

        compiler/7119644/TestByteFloatVect.java Error. Program `java' interrupted! (timed out?)
        compiler/7119644/TestByteIntVect.java Error. Program `java' interrupted! (timed out?)
        compiler/7119644/TestShortFloatVect.java Error. Program `java' interrupted! (timed out?)
        compiler/7119644/TestShortIntVect.java Error. Program `java' interrupted! (timed out?)

              Assignee:
              Vladimir Kozlov
              Reporter:
              Vladimir Kozlov
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: