7199010: incorrect vector alignment

Fixed vectors alignment when several arrays are accessed in one loop.

Reviewed-by: roland, twisti